--- a/fianlProject2048Game/.project
+++ b/fianlProject2048Game/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>finalProject2048Game</name>
+	<name>fianlProject2048Game</name>
 	<comment></comment>
 	<projects>
 	</projects>
